--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cheack",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fateevd.github.io/Check-JSON/index.html",
+  "homepage": "https://fateevd.github",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
